# ClassifieurSVM

./: CMakeLists.txt  ClassifieurSVM_01.pro  main.cpp  mysvm.cpp  mysvm.h  mysvm.ui
